# sig-consulting

./: .gitignore  GITHUB_PAGES.md  GIT_STATUS.md  README.md  ROLE_SHAPES_GUIDE.md  SECURITY_UPDATE.md  SIGVIS_GUIDE.md  SIG_ARCHITECTURE.md  _quarto.yml  build-pages.sh  dev-server.sh  index.qmd  main.py  pyproject.toml  sig-dontpanic.qmd  sig.qmd  test_sig_dat.py  test_sig_graph.py
.github/: deploy-quarto.yml
.github/workflows/: deploy-pages.yml
client_credentials/: README.md
docs/: README.md  robots.txt  search.json  sitemap.xml  styles.css
docs/site_libs/bootstrap/: bootstrap-81ccf06d972d4bf78ec4c14dd4792bc6.min.css  bootstrap-c0388cd853e72d0cc0ece7e02da8185d.min.css
local-data/: .gitignore  README.md
scripts/R/: sig_dat.R  sig_graph.R  sig_vis.R
scripts/classes/: sig_dat.py  sig_graph.py  sig_vis.py
templates/: .env-template
